tests/fixtures/invalid/str_div_none.py
# Cannot divide Str and None
x: float = "hello" / None
